--- a/html/lego_01_home.html
+++ b/html/lego_01_home.html
@@ -21,8 +21,8 @@
  <script src="../../ie/Respond/dest/respond.min.js"></script>
 <link rel="stylesheet" href="../../css/src/lego_01_home.css">
 <![endif]-->
- <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
- <link rel="apple-touch-icon" href="favicon.png">
+ <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
+ <link rel="apple-touch-icon" href="../img/favicon.png">
  
  <title>lego</title>
 </head>
