--- a/LSH/html/main.html
+++ b/LSH/html/main.html
@@ -63,7 +63,7 @@
         편리성을 강조하였습니다.</p>
       <div class="btn_zone">
         <ul>
-          <li class="home_btn"><a href="https://leesh2468.github.io/2020.02_portfolio/ng/index.html">홈페이지 보기</a></li>
+          <li class="home_btn"><a href="https://leesh2468.github.io/2020.02_portfolio/ng/index.html" target="_blank">홈페이지 보기</a></li>
           <!-- <li class="work_btn"><a href="#">작업과정 보기</a></li> -->
         </ul>
       </div>
@@ -79,7 +79,7 @@
       <p>타겟분석을 통해 사용자를 파악해 그에 맞는 디자인과 이목을 끄는 레이아웃으로 구매욕구를 불러일으킬 수 있도록 하였습니다.</p>
       <div class="btn_zone">
         <ul>
-          <li class="home_btn"><a href="https://leesh2468.github.io/2020.02_portfolio/lego/index.html">홈페이지 보기</a></li>
+          <li class="home_btn"><a href="https://leesh2468.github.io/2020.02_portfolio/lego/index.html" target="_blank">홈페이지 보기</a></li>
           <!-- <li class="work_btn"><a href="#">작업과정 보기</a></li> -->
         </ul>
       </div>
